--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -6,7 +6,7 @@ bSubstepping=False
 bSubsteppingAsync=True
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Level/L_Game.L_Game
+EditorStartupMap=/Game/Level/L_Menu.L_Menu
 LocalMapOptions=
 TransitionMap=
 bUseSplitscreen=True
